app/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=M+PLUS+Rounded+1c&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

link {
  /* Vos styles ici */
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

@media screen and (min-width: 600px) {
  .all-content {
    padding: 0 6rem;
    min-height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 600px) {
  .all-content {
    padding: 0 2rem;
  }
}

.main-content {
  flex: 1;
  overflow-x: hidden;
  margin-top: 5%;
}

.poppins-thin {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.poppins-extralight {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
}

.poppins-light {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.poppins-medium {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.poppins-semibold {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.poppins-bold {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.poppins-extrabold {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.poppins-black {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.poppins-thin-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.poppins-extralight-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: italic;
}

.poppins-light-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.poppins-regular-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.poppins-medium-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.poppins-semibold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: italic;
}

.poppins-bold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.poppins-extrabold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: italic;
}

.poppins-black-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: italic;
}

.text-h1-fluid {
  font-size: clamp(3rem, 7vw + 1rem, 10rem);
  line-height: 0.95;
}

.text-h2-fluid {
  font-size: clamp(1.5rem, 2vw + 1rem, 6rem);
  line-height: 1.1;
}

.text-h3-fluid {
  font-size: clamp(1.10rem, 1.10vw + 1rem, 3rem);
  line-height: 1.2;
}

.text-p-fluid {
  font-size: clamp(0.9rem, 1vw + 1rem, 1.15em);
  line-height: 1.5;
}

.p-citation-fluid {
  font-size: clamp(1.05rem, 1.25vw + 1rem, 1.5em);
  line-height: 1.5;
}

.responsive-image {
  max-width: 75%;
  height: auto;
}

.profil {
  border-radius: 10px 10px 10px 100px;
  transition: 0.25s;
}

.profil:hover {
  border-radius: 100px 100px 100px 10px;
  transition: 0.25s;
}

.mobile-nav-logo {
  border-radius: 10px;
}

.logo-text-btn {
  min-width:fit-content;
  background-color: #0065C8;
  padding: 0.5rem 1rem;
  border-radius: 10px;
  transition: 0.3s;
}

.logo-text-btn:hover {
  background-color: white;
  color: #0065C8;
  transition: 0.3s;
}

.logo-text-btn:hover p {
  color: #0065C8;
  transition: 0.3s;
}

.zoom-in-out {
  animation: zoom-in-zoom-out 7s ease-in-out infinite;
}

@keyframes zoom-in-zoom-out {
  0% {
    transform: scale(1, 1);
  }
  50% {
    transform: scale(1.25, 1.25);
  }
  100% {
    transform: scale(1, 1);
  }
}

